Update API Spec
